--- a/stagione-2.html
+++ b/stagione-2.html
@@ -210,7 +210,7 @@ span.choose {
 <ul class="dropdown-menu" style="display: none;">
     <li><a class="dropdown-item" href="/it/stagione-1">Stagione 1</a></li>
     <li><a class="dropdown-item"><u>Stagione 2</u></a></li>
-    <li><a class="dropdown-item" href="/it/season-3">Stagione 3</a></li>
+    <li><a class="dropdown-item" href="/it/stagione-3">Stagione 3</a></li>
 </ul>
 </div>
 <span class="msg"></span>
