--- a/index.html
+++ b/index.html
@@ -282,6 +282,18 @@
   </div>
 
 </div>
+      
+  
+  
+
+
+  
+    <div class="header-nav-item header-nav-item--collection">
+      <a href="https://miraculousladybug.cf/it/stagione-1" data-animation-role="header-element">
+        
+        <b>Episodi Completi</b>
+      </a>
+    </div>
 
           <div class="header-menu-actions">
             <div class="header-menu-actions-action header-menu-actions-action--social">
