--- a/speciali.html
+++ b/speciali.html
@@ -103,25 +103,13 @@ statistics"></a></div></noscript>
 </div><div class="column-wrapper cw cf">
 	<div class="cw-c c-s-hc cf"><div class="column-content c pr cf" style="width:50%;">
 	<div class="c-c c-s-h cf"><div class="b-img b-img-link b b-s cf wnd-orientation-landscape wnd-type-image img-s-n" style="margin-left:0;margin-right:0;" id="wnd_ImageBlock_98339">
-    <a class="b-img-a" href="http://WWW.GOOGLE.COM" rel="nofollow" target="_blank">
+    <a class="b-img-a" href="https://miraculousladybug.cf/watch-special?language=it&episode=1" rel="nofollow" target="_blank">
         <div class="b-img-w">
             <div class="b-img-c" style="padding-bottom:56.24%;text-align:center;">
                 <img src="https://files.miraculousladybug.cf/miniatures/special/newyork.jpg" style="top:0%;left:0%;width:100%;height:100%;position:absolute;"><div class="b-img-embed">
                     </div>
             </div>
             <div class="b-img-t"><b>SPECIALE NEW YORK</b></div>
-        </div>
-    </a>
-</div></div>
-</div><div class="column-content c pr cf" style="width:50%;">
-	<div class="c-c c-s-h cf"><div class="b-img b-img-link b b-s cf wnd-orientation-landscape wnd-type-image img-s-n" style="margin-left:0;margin-right:0;" id="wnd_ImageBlock_34066">
-    <a class="b-img-a" href="http://WWW.GOOGLE.COM" rel="nofollow" target="_blank">
-        <div class="b-img-w">
-            <div class="b-img-c" style="padding-bottom:56.24%;text-align:center;">
-                <img src="https://files.miraculousladybug.cf/miniatures/special/shangahi.jpg" style="top:0%;left:0%;width:100%;height:100%;position:absolute;"><div class="b-img-embed">
-                    </div>
-            </div>
-            <div class="b-img-t"><b>SPECIALE SHANGHAI</b></div>
         </div>
     </a>
 </div></div>
