--- a/stagione-1.html
+++ b/stagione-1.html
@@ -50,7 +50,7 @@
 		<span>Close Menu</span>
 	</a>
 	<ul class="level-1"><li>
-        <a class="menu-item" href="/it/speciali.html/"><span class="menu-item-text"><b>Episodi Speciali</b></span></a>
+        <a class="menu-item" href="/it/speciali.html"><span class="menu-item-text"><b>Episodi Speciali</b></span></a>
 			
 		</li><li>
 			<a class="menu-item">
