--- a/stagione-3.html
+++ b/stagione-3.html
@@ -50,10 +50,7 @@
 		<span>Close Menu</span>
 	</a>
 	<ul class="level-1"><li>
-        <a class="menu-item" href="/music/"><span class="menu-item-text"><b>Music</b></span></a>
-			
-		</li><li>
-        <a class="menu-item" href="/comic-books/"><span class="menu-item-text"><b>Comics</b></span></a>
+        <a class="menu-item" href="/it/speciali.html"><span class="menu-item-text"><b>Episodi Speciali</b></span></a>
 			
 		</li><li>
 			<a class="menu-item">
