--- a/speciali.html
+++ b/speciali.html
@@ -72,7 +72,7 @@ statistics"></a></div></noscript>
 		<select name="forma" onchange="location = this.value;">
  <option value="/en/specials.html">🇬🇧 English</option>
  <option value="/es/especiales.html">🇪🇸 Español</option>
- <option value="/fr/épisodes-spéciaux.html">🇫🇷 Français</option>
+ <option value="https://miraculousladybug.cf/fr/épisodes-spéciaux.html">🇫🇷 Français</option>
  <option selected>🇮🇹 Italiano</option>
 </select>
         </a>
