--- a/indexV2.html
+++ b/indexV2.html
@@ -585,7 +585,7 @@
 <body>
 <div class="alert">
   <center><span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
-  <strong>La versione Premium è ora disponibile!</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button onclick="window.location.href='/premium.html';">Provalo ora!<span></span></button></center>
+  <strong>La versione Premium è ora disponibile!</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button onclick="window.location.href='/premium/';">Provalo ora!<span></span></button></center>
 </div></body>
   
     <section class="page-section
