--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
 <body>
 <div class="alert">
   <center><span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
-  <strong>La versione Premium è ora disponibile!</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button onclick="window.location.href='/premium/';">Provalo ora!<span></span></button></center>
+  <strong>Il nostro sito web è in manutenzione, alcuni episodi potrebbero non funzionare. Ci dispiace per l'inconvenienza :(<span></span></button></center>
 </div></body>
   
     <section class="page-section
